--- a/css/main.css
+++ b/css/main.css
@@ -784,3 +784,32 @@ input {
 .decoration .decorationinput {
   font-weight: bold;
 }
+
+.session {
+  text-align: left;
+  padding-left: 400px !important;
+  font-weight: bold;
+}
+
+h4 {
+  font-weight: bold;
+}
+
+
+.closes img {
+  width: 28px !important;
+  height: 28px !important;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+  .div1 { grid-area: 1 / 1 / 2 / 2; }
+  .div2 { grid-area: 1 / 2 / 2 / 3; }
+  .div3 { grid-area: 2 / 1 / 3 / 2; }
+  .div4 { grid-area: 2 / 2 / 3 / 3; }
