--- a/assets/login_style.css
+++ b/assets/login_style.css
@@ -3,12 +3,13 @@
 /* BASIC */
 
 html {
-  background-color: #56baed;
+  background-color: #28a745;;
+  /*   background-color: #28a745; */
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  height: 100vh;
+  height: 90vh;
 }
 
 a {
@@ -75,7 +76,7 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #28a745;
 }
 
 
@@ -83,7 +84,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #56baed;
+  background-color: #28a745;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -92,8 +93,8 @@ input[type=button], input[type=submit], input[type=reset]  {
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 233, 113, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(107, 233, 95, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -105,7 +106,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
+  background-color: #2a7d3d;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -160,7 +161,7 @@ input[type=password] {
 
 input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #28a745;
 }
 
 input[type=text]:placeholder {
@@ -258,7 +259,7 @@ input[type=text]:placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #28a745;
   content: "";
   transition: width 0.2s;
 }
@@ -280,14 +281,14 @@ input[type=text]:placeholder {
 } 
 
 #icon {
-  width:60%;
+  width: 70px;
 }
 
 * {
   box-sizing: border-box;
 }
 
-
-body {
-  background-color: #28a745 !important;
+img {
+ margin-top: 20px;
+  width: 100px;
 }
