--- a/assets/style_dashboard.css
+++ b/assets/style_dashboard.css
@@ -52,13 +52,13 @@
 }
 
 .border {
-    border-radius: 8px;
+    border-radius: 26px 26px 26px 26px;
     margin-left: 50px;
     margin-right: 50px;
     padding: 20px;
-    -webkit-box-shadow: -2px 5px 21px 9px rgba(0,0,0,0.75);
-    -moz-box-shadow: -2px 5px 21px 9px rgba(0,0,0,0.75);
-    box-shadow: -2px 5px 21px 9px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 4px 20px 5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 20px 5px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 20px 5px rgba(0,0,0,0.75);
 }
 
 .sendbtn {
